--- a/index.html
+++ b/index.html
@@ -7,57 +7,67 @@
 	</title>
 </head>
 <body>
-	The Best Chocolate Chip Cookies
-	Recipe by: Bonnie Owens
+	<h1>The Best Chocolate Chip Cookies</h1>
+	
+	<p> <img src="assets/cookiemonster.jpg" tag="cookie monster"></p>
+	
+	<h4>Recipe by: Sesame Street Chefs</h4>
 
-RELATED RECIPES
+	<h3>RELATED RECIPES<h3>
 
-Amazing Chocolate Chip Cookies!
-Beer and Pretzel Chocolate Chip Cookies
-Bisquick® Chocolate Chip Cookies
-Browned Butter and Coconut Chocolate Chip Cookies
-Buttery Chocolate Chip Cookies
-Cherry Chocolate Chip Cookies
-PREP TIME
+	<ul>
+		<li>Amazing Chocolate Chip Cookies!</li>
+		<li>Beer and Pretzel Chocolate Chip Cookies</li>
+		<li>Bisquick® Chocolate Chip Cookies</li>
+		<li>Browned Butter and Coconut Chocolate Chip Cookies</li>
+		<li>Buttery Chocolate Chip Cookies</li>
+		<li>Cherry Chocolate Chip Cookies</li>
+	</ul>
 
-45 Min
 
-TOTAL TIME
+	<h2>PREP TIME</h2>
+	<p>45 Min</p>
 
-45 Min
+	<h2>TOTAL TIME</h2>
+	<p>45 Min</p>
 
-SERVINGS
+	<h2>SERVINGS</h2>
+	<p>A LOT</p>
 
-A LOT
+	<h2>INGREDIENTS</h2>
 
-INGREDIENTS
+	<ul>
+		<li>1 1/2 cup (3 sticks) butter, softened</li>
+		<li>1 cup brown sugar</li>
+		<li>1 cup granulated sugar</li>
+		<li>1 Tbl vanilla instant pudding powder</li>
+		<li>2 Tbl milk</li>
+		<li>2 Tbl vanilla extract</li>
+		<li>2 eggs</li>
+		<li>4 cups all purpose flour</li>
+		<li>2 tsp baking soda</li>
+		<li>1/2 tsp salt</li>
+		<li>4 cups chocolate chips</li>
+		<li>1 cup chopped walnuts or pecans(optional)</li>
+	</ul>
 
-1 1/2 cup (3 sticks) butter, softened
-1 cup brown sugar
-1 cup granulated sugar
-1 Tbl vanilla instant pudding powder
-2 Tbl milk
-2 Tbl vanilla extract
-2 eggs
-4 cups all purpose flour
-2 tsp baking soda
-1/2 tsp salt
-4 cups chocolate chips
-1 cup chopped walnuts or pecans(optional)
-How to make Mama’s Recipe: The Best Chocolate Chip Cookies
+	<h3>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</h3>
+	<ol>
+		<li>Preheat oven to 350 degrees</li>
+		<li>Beat butter and sugars together until light and fluffy</li>
+		<li>Stir in pudding mix milk and vanilla extract.</li>
+		<li>Beat in eggs.</li>
+		<li>Add dry ingredients and stir until combined.</li>
+		<li>Stir in chocolate chips and nuts.</li>
+		<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
+		<li>Bake 8-10 minutes or until golden brown.</li>
+	</ol>
 
-Preheat oven to 350 degrees
-Beat butter and sugars together until light and fluffy
-Stir in pudding mix milk and vanilla extract.
-Beat in eggs.
-Add dry ingredients and stir until combined.
-Stir in chocolate chips and nuts.
-Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.
-Bake 8-10 minutes or until golden brown.
-EXPERT TIPS
+	<h2>EXPERT TIPS</h2>
 
-Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!
-Got questions? Our experts have the answers. Email Me
+		<blockquote>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!
+		</blockquote>
+		<p>Got questions? Our experts have the answers. <a href="mailto:cookiemonster@yahoo.com">Email Me Cookies</a></p>
 
 NUTRITION INFORMATION
 
@@ -69,47 +79,6 @@ This recipe was altered from Open Source Recipe for more recipes go here.
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
