last link added

--- a/index.html
+++ b/index.html
@@ -69,16 +69,10 @@
 		</blockquote>
 		<p>Got questions? Our experts have the answers. <a href="mailto:cookiemonster@yahoo.com">Email Me Cookies</a></p>
 
-NUTRITION INFORMATION
+	<h2>NUTRITION INFORMATION</h2>
 
-Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
-
-This recipe was altered from Open Source Recipe for more recipes go here.
-
-
-
-
-
+	<p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>
+	<p>This recipe was altered from Sesame Street <a href="http://www.sesamestreet.org/muppets/cookie-monster" target="_blank">for more recipes go here.</a></p>
 </body>
 
 </html>
